# wpcode

./: .gitignore  README.md  pyproject.toml
src/wpcode_tool/: __init__.py  builder.py  cli.py  mapper.py  models.py  parser.py
tests/: test_builder.py  test_parser.py
tests/fixtures/: wpcode_export.json
