[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wpcode-tool"
version = "0.1.0"
description = "Utility to convert WPCode exports into WordPress plugins"
authors = [{name = "AI Assistant"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
wpcode-tool = "wpcode_tool.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

